<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myDarkPurple"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailMovieActivity">

    <ScrollView
        android:id="@+id/myScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/img_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/desc_background_image"
                    android:scaleType="fitXY" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/def"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_blurry_purple" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/label_movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_marginEnd="20dp"
                            android:layout_toStartOf="@id/container_like"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/sf_pro_display_regular"
                            android:text="@string/loading"
                            android:textColor="@color/colorWhite"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            tools:text="Judul Film Disini" />

<!--                        This Linear Layout Needed because i cant use the -->
<!--                        background on like button-->
                        <LinearLayout
                            android:id="@+id/container_like"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            android:layout_marginEnd="10dp"
                            android:gravity="center"
                            android:background="@drawable/circle"
                            android:backgroundTint="@color/white">

                            <com.like.LikeButton
                                android:id="@+id/like"
                                android:layout_margin="10dp"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:backgroundTint="@color/white"
                                app:icon_size="24dp"
                                app:icon_type="heart" />
                        </LinearLayout>

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/label_movie_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        tools:text="20/20/2020" />

                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/containerCover"
                        android:layout_width="100dp"
                        android:layout_height="130dp"
                        android:layout_marginEnd="10dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:id="@+id/img_cover"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/def"
                            android:scaleType="fitXY"
                            android:src="@drawable/dark_placeholder" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/label_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_toEndOf="@id/containerCover"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/original_voice_language"
                        android:textColor="@color/colorWhite"
                        android:textSize="13sp"
                        tools:text="Language" />

                    <ImageView
                        android:id="@+id/image_flag"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_toEndOf="@id/label_language"
                        android:contentDescription="@string/cdesc_movie"
                        android:src="@color/white" />

                    <TextView
                        android:id="@+id/label_movie_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_language"
                        android:layout_toEndOf="@id/containerCover"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        tools:text="Rating : ⭐⭐⭐⭐" />

                    <TextView
                        android:id="@+id/label_tv_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_language"
                        android:layout_toEndOf="@id/containerCover"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:text=""/>

                    <TextView
                        android:id="@+id/label_real_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_tv_rate"
                        android:layout_toEndOf="@id/containerCover"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        tools:text="(5/10)" />

                    <TextView
                        android:id="@+id/label_movie_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/label_real_rating"
                        android:layout_toEndOf="@id/containerCover"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        tools:text="Genre : " />

                </RelativeLayout>


                <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="60dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:contentDescription="@string/def"
                    android:src="@drawable/ic_baseline_share_24"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:tint="@color/colorWhite" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/storyboard"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label_storyboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/loading"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/production_house"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label_production_house"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/loading"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/include_loading"
        layout="@layout/ic_loading_screen"
        android:visibility="gone" />


</RelativeLayout>